--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.38.2",
     "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
